# etc

./: .gitignore  nfa_bb.py  square_square.py
bb_tri/: Cargo.toml  README.md
bbcs/: Cargo.toml  README.md
bool_circuits/: aig.py  pla.py
brainfuck_busy_beaver/: bf_bb.py  bf_enum.py  bf_sim.py  col_sim.py  paren_enum.py
bug_game/: README.md  bug.py
closest_planet/: ephem.py  pcm.py
dyuan_game/: game.py  nash_test.py
fractran/: README.md  base.py  bit_code.py  gated_weights.py  mask_lin_invar.py  mask_lin_invar_all.py  parse.py  primes.py  show.py  sim.py  sim_all.py  span_vec_masked.py  span_vec_masked_all.py
gen_rec/: Cargo.toml
gen_rec/igrf/: erdos.igrf
gen_rec/mgrf/: ack_worm.mgrf  base.mgrf  bool_zero.mgrf  brocard.mgrf  collatz.mgrf  erdos.mgrf  fermat.mgrf  func_rep.mgrf  goodstein.mgrf  well_order.mgrf
gen_rec/src/: alias.rs  analysis.rs  backward_decider.rs  base.rs  chaos_score.rs  closed_form.rs  closed_form_enum.rs  compare_symbolic.rs  enumerate.rs  example_ack.rs  examples.rs  fingerprint.rs  grf.rs  igrf.rs  io_grl.rs  io_table.rs  lib.rs  math.rs  mgrf.rs  novel_db.rs  novel_enum.rs  optimize.rs  pruning.rs  search_util.rs  sem.rs  semantic_search.rs  sim_nat.rs  simulate.rs
nonogram/: nonogram.py
post_tag/: Cargo.toml  README.md
set_puzzle/: seq_cont.py  set_cycles.py
smbc_tic_tac_toe/: game_tree.py  imperf_strategy.py  position.py  strategy.py
super_auto_pets/: battle.py  compare.py  nash.py  pets.py  search.py  teams.py  util.py
tezaurs/: describe.py  extract.py  filter.py  ngrams.py
wordle/: wordle_solver.py
(+49 files in other folders)
