[package]
name = "gen_rec"
version = "0.1.0"
edition = "2024"

[toolchain]
channel = "stable"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.10.1"
