[package]
name = "gen_rec"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4.0"
memoize = "0.4.2"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rug = "1.24.1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
