[package]
name = "gen_rec"
version = "0.1.0"
edition = "2024"

[toolchain]
channel = "stable"

[profile.release]
debug = true

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
rand = "0.10.1"
rayon = "1.10"
regex = "1.10.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
